working on mobile nav bug

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,7 +33,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-.content {
-  position: relative;
-  z-index: -1;
-}
+// .content {
+//   position: relative;
+//   z-index: -1;
+// }
